# Team_Force

./: .dockerignore  Dockerfile  Readme.md  docker-compose.yaml
Candidates/: pytest.ini
Candidates/candidates/: settings.py  urls.py
Candidates/django-package/: pyproject.toml
Candidates/django-package/tests/: test_django_package.py
Candidates/fixtures/: skill.json  user.json
Candidates/users/: admin.py  models.py  serializers.py  urls.py  views.py
Candidates/users/management/commands/: loadall.py
Candidates/users/migrations/: 0001_initial.py  0002_rename_tags_user_skills.py
